add custom root validator for AsyncClient also
Signed-off-by: Rajat Jindal <rajatjindal83@gmail.com>

--- a/templates/ApiClient.mustache
+++ b/templates/ApiClient.mustache
@@ -649,6 +649,11 @@ namespace {{packageName}}.Client
                 client.ClientCertificates = configuration.ClientCertificates;
             }
 
+            if (configuration.CertificateAuthorities != null)
+            {
+                client.RemoteCertificateValidationCallback = CreateCustomRootRemoteValidator(configuration.CertificateAuthorities);
+            }
+
             InterceptRequest(req);
 
             IRestResponse<T> response;
